# no_pinocchio

./: 0.0-MJ-pinochio-sandbox.ipynb  Dockerfile  LICENSE  README.md  chatapp.py  docker-compose.yml  hello.py  no_pin_sandbox.py  np2.py  pyproject.toml
.github/workflows/: ci.yml
configs/: default.toml  dev.toml
notebooks/: 0.0-MJ-pinochio-sandbox.ipynb
src/nopin/: __init__.py  api.py  main.py
src/nopin/clients/: __init__.py  llm.py  nli.py
src/nopin/config/: __init__.py  settings.py
src/nopin/core/: __init__.py  nopin.py  prompts.py
src/nopin/demo/: app.py
src/nopin/scripts/: start_api.py  start_demo.py
tests/: test_api.py  test_config_settings.py  test_llm_client.py  test_nli_client.py  test_nopin.py  test_prompts.py
